--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.nikhar.notetaker.MainActivity">
+    tools:context="com.example.nikhar.notetaker.MainActivity"
+    android:background="@color/back">
 
    <ListView
        android:id="@+id/android:list"
@@ -17,6 +18,7 @@
 
    <at.markushi.ui.CircleButton
        android:layout_width="64dp"
+       android:id="@+id/circle"
        android:layout_height="64dp"
        app:cb_color="@color/colorPrimary"
        android:layout_alignParentBottom="true"
