--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,9 +7,10 @@
 
     <ImageView
         android:id="@+id/imageDocIcon"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:src="@drawable/ic_action_name" />
+        android:layout_marginTop="5dp"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:src="@drawable/docs" />
 
     <TextView
         android:id="@+id/tvNote"
@@ -23,6 +24,7 @@
         android:singleLine="true"
         android:text="Dummy Text"
         android:textColor="@color/list_text"
-        android:textSize="18sp" />
+        android:fontFamily="sans-serif-condensed"
+        android:textSize="25sp" />
 
 </RelativeLayout>
