--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -4,25 +4,47 @@
     android:weightSum="2"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+    <FrameLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:id="@+id/title"
-        android:hint="Enter Title"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:id="@+id/title"
+            android:hint="Enter Title"
+            android:enabled="false"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="10dp"
+            android:capitalize="characters"
+            android:textSize="25dp"
+            android:textAlignment="center"
+            android:layout_alignParentEnd="true" />
 
-    <EditText
+        <ImageView
+            android:src="@drawable/ic_action_edit"
+            android:id="@+id/edit_note"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+        android:layout_gravity="right|center_vertical"
+         />
+    </FrameLayout>
+
+
+    <com.gajani.nikhar.EasyNotes.LineEditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:capitalize="sentences"
         android:gravity="top"
+        android:enabled="false"
+        android:lineSpacingExtra="10dp"
         android:id="@+id/editText"
-        android:background="@color/back"
         android:hint="Enter Your Notes"
+        android:textSize="22dp"
+        android:layout_margin="10dp"
         android:layout_alignRight="@+id/title"
         android:layout_alignEnd="@+id/title" />
 
