--- a/app/src/main/res/menu/menu_editor1.xml
+++ b/app/src/main/res/menu/menu_editor1.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+   <!-- <item
+        android:id="@+id/spinner"
+        android:title="ActionBar Spinner"
+        app:actionViewClass="android.widget.Spinner"
+        android:background="#ff00"
+        app:showAsAction="always" />-->
+
     <item android:id="@+id/done"
         android:orderInCategory="100"
         android:title="done"
