--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     android:weightSum="2"
     android:orientation="vertical"
+    android:background="@color/lightPrimaryColor"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="320dp"
+            android:background="@drawable/round_rect"
             android:layout_height="65dp"
             android:id="@+id/title"
             android:hint="Enter Title"
+            android:layout_gravity="center"
             android:enabled="false"
             android:textStyle="bold"
+            android:textColor="@drawable/edittext_color"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_margin="10dp"
-            android:capitalize="characters"
+            android:capitalize="sentences"
             android:textSize="25dp"
+            android:layout_marginRight="30dp"
             android:textAlignment="center"
             android:layout_alignParentEnd="true" />
 
@@ -34,11 +41,16 @@
     </FrameLayout>
 
 
-    <com.gajani.nikhar.EasyNotes.LineEditText
+    <EditText
+        android:background="@drawable/round_rect"
         android:layout_width="match_parent"
+        android:textColor="@drawable/edittext_color"
         android:layout_height="match_parent"
+        android:padding="10dp"
         android:capitalize="sentences"
         android:gravity="top"
+        android:scrollbars="horizontal"
+        android:scrollHorizontally="true"
         android:enabled="false"
         android:lineSpacingExtra="10dp"
         android:id="@+id/editText"
@@ -49,3 +61,4 @@
         android:layout_alignEnd="@+id/title" />
 
     </LinearLayout>
+
