--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gajani.nikhar.EasyNotes.MainActivity"
-    android:background="@color/back">
+    android:background="@drawable/round_shape">
 
    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
+
 
    <at.markushi.ui.CircleButton
        android:layout_width="64dp"
