--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:padding="4dp">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:background="@drawable/round_shape"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
+
 
     <ImageView
         android:id="@+id/imageDocIcon"
-        android:layout_marginTop="5dp"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
+        android:layout_width="40dp"
+        android:layout_gravity="center_vertical"
+        android:layout_height="45dp"
         android:src="@drawable/docs" />
+
+    <LinearLayout android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <TextView
         android:id="@+id/tvNote"
@@ -23,8 +33,20 @@
         android:layout_toRightOf="@+id/imageDocIcon"
         android:singleLine="true"
         android:text="Dummy Text"
+        android:textStyle="bold"
         android:textColor="@color/list_text"
         android:fontFamily="sans-serif-condensed"
-        android:textSize="25sp" />
+        android:textSize="23dp" />
 
-</RelativeLayout>
+
+    <TextView
+        android:id="@+id/note_Text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="This is Note"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="15dp"/>
+
+    </LinearLayout>
+</LinearLayout>
