--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7cb342</color>
-    <color name="colorPrimaryDark">#558b2f</color>
-    <color name="colorAccent">#558b2f</color>
-    <color name="list_text">#333</color>
-    <color name="back">#f1f8e9</color>
+    <color name="colorPrimary">#673AB7</color>
+    <color name="colorPrimaryDark">#512DA8</color>
+    <color name="colorAccent">#FF5722</color>
+    <color name="textColor">#FFFFFF</color>
+    <color name="lightPrimaryColor">#D1C4E9</color>
+    <color name="list_text">#212121</color>
+    <color name="secondaryText">#727272</color>
+    <color name="dividor">#B6B6B6</color>
+    <color name="back">#FFFFFF</color>
 </resources>
