--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sliding_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    sothree:umanoPanelHeight="68dp"
+    sothree:umanoShadowHeight="4dp"
+    sothree:umanoParallaxOffset="100dp"
+    sothree:umanoDragView="@+id/dragView"
+    sothree:umanoOverlay="true"
+    sothree:umanoScrollableView="@+id/list">
+
+<LinearLayout android:layout_height="match_parent"
+    android:layout_width="match_parent"
     android:weightSum="2"
     android:orientation="vertical"
     android:background="@color/lightPrimaryColor"
@@ -24,16 +39,19 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
-            android:layout_margin="10dp"
             android:capitalize="sentences"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
             android:textSize="25dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="22dp"
             android:textAlignment="center"
             android:layout_alignParentEnd="true" />
 
         <ImageView
             android:src="@drawable/ic_action_edit"
             android:id="@+id/edit_note"
+            android:layout_marginLeft="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
         android:layout_gravity="right|center_vertical"
@@ -54,11 +72,48 @@
         android:enabled="false"
         android:lineSpacingExtra="10dp"
         android:id="@+id/editText"
+        android:layout_marginBottom="70dp"
         android:hint="Enter Your Notes"
         android:textSize="22dp"
-        android:layout_margin="10dp"
+      android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_alignRight="@+id/title"
         android:layout_alignEnd="@+id/title" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_width="match_parent"
+        android:layout_height="68dp">
+
+
+        <Switch
+            android:layout_weight="1"
+            android:paddingTop="20dp"
+            android:gravity="center_horizontal"
+            android:textSize="18dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/switch1"
+            android:text="Priority"/>
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:id="@+id/alarmBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:src="@drawable/alarm"/>
+
+
+        </LinearLayout>
+
+
+
+
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
