--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,8 +14,7 @@
         android:id="@+id/imageDocIcon"
         android:layout_width="40dp"
         android:layout_gravity="center_vertical"
-        android:layout_height="45dp"
-        android:src="@drawable/docs" />
+        android:layout_height="45dp" />
 
     <LinearLayout android:layout_height="wrap_content"
         android:layout_width="fill_parent"
@@ -45,6 +44,8 @@
         android:layout_height="wrap_content"
         android:text="This is Note"
         android:layout_marginLeft="5dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:layout_marginBottom="5dp"
         android:textSize="15dp"/>
 
