--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:yourapp="http://schemas.android.com/tools">
 
+
+
+  <!--  <item android:id="@+id/spinner"
+        android:orderInCategory="102"
+        app:showAsAction="always"
+        android:title="Category"
+        yourapp:actionViewClass="android.widget.Spinner" />-->
 
     <item android:id="@+id/delete_all"
         android:orderInCategory="101"
