--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="secondaryText">#727272</color>
     <color name="dividor">#B6B6B6</color>
     <color name="back">#FFFFFF</color>
+    <color name="lightRed">#FF7F7F</color>
+    <color name="notification">#1ABB9C</color>
+
 </resources>
