--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,12 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:actionBarWidgetTheme">@style/Theme.AppCompat.Light</item>
-        <item name="actionBarWidgetTheme">@style/Theme.AppCompat.Light</item>
+        <item name="android:actionBarWidgetTheme">@style/Theme.AppCompat.Light.DarkActionBar</item>
+        <item name="actionBarWidgetTheme">@style/Theme.AppCompat.Light.DarkActionBar</item>
+        <item name="android:spinnerStyle">@style/Theme.AppCompat.Light.DarkActionBar</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
+
 
     <style name="AppTheme.new">
         <item name="windowActionBar">false</item>
@@ -16,6 +19,7 @@
     -->
         <item name="windowNoTitle">true</item>
     </style>
+
 
     <style name="alarm_dialog_style" parent="Theme.AppCompat.Dialog">
         <item name="android:windowFrame">@null</item>
